--- a/style.css
+++ b/style.css
@@ -15,6 +15,21 @@ body{
     width: 100%;
     background-color: var(--main-color) !important;
 }
+.preloader {
+    align-items: center;
+    background: var(--light-color);
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transition: opacity 0.2s linear;
+    width: 100%;
+    z-index: 9999;
+    opacity: 1;
+    transform: opacity 1s linear;
+}
 .navbar-custom{
     background-color: #d4a373!important;
 }
@@ -26,6 +41,7 @@ body{
     gap: 16px;
     padding: 8px;
 }
+
 iframe{
     width: 100%;
     height: 100vh;
