--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body{
     gap: 16px;
     padding: 8px;
 }
-
 iframe{
     width: 100%;
     height: 100vh;
@@ -61,8 +60,8 @@ iframe{
     cursor: pointer;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
-.no-outline:focus{
-    outline: none;
+.btn-outline-success{
+  outline: 1px #31BAFD !important;
 }
 .card-title{
     text-align: center;
@@ -84,54 +83,54 @@ img{
 .content {
     position: relative;
   }
-  .content h2 {
-    color: #fff;
-    font-size: 5em;
-    position: absolute;
-    left:50%;
-    transform: translate(-50%, -50%);
+.content h2 {
+  color: #fff;
+  font-size: 5em;
+  position: absolute;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+
+.content h2:nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 3px #31BAFD;
+}
+
+.content h2:nth-child(2) {
+  color: #31BAFD;
+  animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 25%,
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
   }
-  
-  .content h2:nth-child(1) {
-    color: transparent;
-    -webkit-text-stroke: 3px #31BAFD;
+
+  50% {
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
   }
-  
-  .content h2:nth-child(2) {
-    color: #31BAFD;
-    animation: animate 4s ease-in-out infinite;
-  }
-  
-  @keyframes animate {
-    0%,
-    100% {
-      clip-path: polygon(
-        0% 25%,
-        16% 44%,
-        33% 50%,
-        54% 60%,
-        70% 61%,
-        84% 59%,
-        100% 52%,
-        100% 100%,
-        0% 100%
-      );
-    }
-  
-    50% {
-      clip-path: polygon(
-        0% 60%,
-        15% 65%,
-        34% 66%,
-        51% 62%,
-        67% 50%,
-        84% 45%,
-        100% 46%,
-        100% 100%,
-        0% 100%
-      );
-    }
-  }
+}
 @media only screen and (max-width: 900px) {
     #divArea {
       flex-direction:column;
